get matching lexemes form  audios
